vcs/specs/parser/fail/statements/spawn_missing_expr.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, spawn, expression, error
// @description: Test spawn statement with missing expression
// @expected-error: E048

async fn test() {
    spawn;
}
